package Labb.Model;

/**
 * Enumerations for orientation in the 2d space.
 */
enum Direction {
    UP, DOWN, LEFT, RIGHT
}