@startuml

title __LABB's Class Diagram__\n


    namespace abb {
      class Labb.Model.AngledFlatbed {
          + AngledFlatbed()
      }
    }

  


    namespace abb {
      abstract class Labb.Model.Car {
          + Car()
      }
    }

  


    namespace abb {
      class Labb.CarController {
          ~ motorizedVehicles : ArrayList<MotorizedVehicle>
          - delay : int
          - timer : Timer
          {static} + main()
          ~ brake()
          ~ gas()
      }
    }

  


    namespace abb {
      class Labb.CarController.TimerListener {
          + actionPerformed()
          - collision()
      }
    }

  


    namespace abb {
      class Labb.Model.CarFerry {
          - flatbed : StateFlatbed<Car>
          + CarFerry()
          + confirmLoad()
          + getCurrentAngle()
          + getLoadedCars()
          + loadCar()
          + loadCheck()
          + lowerFlatbed()
          + move()
          + raiseFlatbed()
          + unloadCar()
          # speedFactor()
      }
    }


    namespace abb {
      class Labb.Model.CarTransporter {
          - flatbed : StateFlatbed<T>
          + CarTransporter()
          + confirmLoad()
          + getCurrentAngle()
          + getLoadedCars()
          + loadCar()
          + loadCheck()
          + lowerFlatbed()
          + move()
          + raiseFlatbed()
          + unloadCar()
          # speedFactor()
      }
    }


    namespace abb {
      class Labb.View.CarView {
          ~ brakeAmount : int
          ~ brakeButton : JButton
          ~ brakeSpinner : JSpinner
          ~ controlPanel : JPanel
          ~ gasAmount : int
          ~ gasButton : JButton
          ~ gasLabel : JLabel
          ~ gasPanel : JPanel
          ~ gasSpinner : JSpinner
          ~ liftBedButton : JButton
          ~ lowerBedButton : JButton
          ~ startButton : JButton
          ~ stopButton : JButton
          ~ turboOffButton : JButton
          ~ turboOnButton : JButton
          {static} - X : int
          {static} - Y : int
          + CarView()
          - initComponents()
      }
    }


    namespace abb {
      enum Direction {
        DOWN
        LEFT
        RIGHT
        UP
      }
    }



    namespace abb {
      class Labb.View.DrawPanel {
          ~ saabImage : BufferedImage
          ~ saabPoint : Point
          ~ scaniaImage : BufferedImage
          ~ scaniaPoint : Point
          ~ volvoImage : BufferedImage
          ~ volvoPoint : Point
          + DrawPanel()
          # paintComponent()
          ~ moveit()
      }
    }

  

    namespace abb {
      abstract class Labb.Model.Flatbed {
          # currentAngle : int
          # maxAngle : int
          # minAngle : int
          + Flatbed()
          + getCurrentAngle()
          + getMaxAngle()
          + getMinAngle()
          + lowerFlatbed()
          + raiseFlatbed()
      }
    }

  

    namespace abb {
      interface Labb.Model.ICanLoadCars {
          {abstract} + confirmLoad()
          {abstract} + getX()
          {abstract} + getY()
          {abstract} + loadCar()
          {abstract} + loadCheck()
      }
    }



    namespace abb {
      interface Labb.Model.IMovable {
          {abstract} + move()
          {abstract} + turnLeft()
          {abstract} + turnRight()
      }
    }

  

    namespace abb {
      class Labb.Main {
          {static} + main()
          ~ program()
      }
    }


    namespace abb {
      abstract class Labb.Model.MotorizedVehicle {
          - color : Color
          - currentSpeed : double
          {static} - directionArrayLeft : Direction[]
          {static} - directionArrayRight : Direction[]
          - getEnginePower : double
          - isLoadedOnACarrier : boolean
          - modelName : String
          - nrDoors : int
          - x : double
          - y : double
          + MotorizedVehicle()
          + MotorizedVehicle()
          + brake()
          + gas()
          + getCarrier()
          + getColor()
          + getCurrentDirection()
          + getCurrentSpeed()
          + getEnginePower()
          + getModelName()
          + getNrDoors()
          + getX()
          + getY()
          + move()
          + setColor()
          + startEngine()
          + stopEngine()
          + turnLeft()
          + turnRight()
          {abstract} # speedFactor()
          ~ rollOutFromCarrier()
          ~ setLoaded()
          ~ updateWithCarrier()
          - decrementSpeed()
          - findNextDirection()
          - incrementSpeed()
          - setCurrentSpeed()
          - setX()
          - setY()
      }
    }

  

    namespace abb {
      class Labb.Model.Saab95 {
          - turboOn : boolean
          + Saab95()
          + setTurboOff()
          + setTurboOn()
          # speedFactor()
      }
    }

  

    namespace abb {
      class Labb.Model.Scania {
          + Scania()
          + getCurrentAngle()
          + lowerFlatbed()
          + move()
          + raiseFlatbed()
          # speedFactor()
      }
    }

  

    namespace abb {
      class Labb.Model.StateFlatbed {
          - loadedCars : Deque<T>
          + StateFlatbed()
          + getLoadedCars()
          + loadCar()
          + unloadFirstCar()
          + unloadLastCar()
      }
    }



    namespace abb {
      abstract class Labb.Model.Truck {
          + Truck()
          {abstract} + getCurrentAngle()
      }
    }

  

    namespace abb {
      class Labb.Model.Volvo240 {
          {static} - trimFactor : double
          + Volvo240()
          # speedFactor()
      }
    }

  

    namespace abb {
      class Labb.Model.Workshop {
          - carsInTheShop : List<T>
          - maxCarCapacity : int
          - x : double
          - y : double
          + Workshop()
          + confirmLoad()
          + getCarsInTheShop()
          + getX()
          + getY()
          + loadCar()
          + loadCheck()
          + unloadCar()
      }
    }

  

  Labb.Model.AngledFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Car -up-|> Labb.Model.MotorizedVehicle
  Labb.CarController o-- Labb.View.CarView : frame
  Labb.CarController +-down- Labb.CarController.TimerListener
  Labb.CarController.TimerListener .up.|> java.awt.event.ActionListener
  Labb.Model.CarFerry .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarFerry -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.CarTransporter .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarTransporter -up-|> Labb.Model.Truck
  Labb.View.CarView -up-|> javax.swing.JFrame
  Labb.View.CarView o-- Labb.CarController : carC
  Labb.View.CarView o-- Labb.View.DrawPanel : drawPanel
  Labb.View.DrawPanel -up-|> javax.swing.JPanel
  Labb.Model.MotorizedVehicle .up.|> Labb.Model.IMovable
  Labb.Model.MotorizedVehicle o-- Labb.Model.ICanLoadCars : carrier
  Labb.Model.MotorizedVehicle o-- Labb.Model.Direction : currentDirection
  Labb.Model.Saab95 -up-|> Labb.Model.Car
  Labb.Model.Scania -up-|> Labb.Model.Truck
  Labb.Model.Scania o-- Labb.Model.Flatbed : flatbed
  Labb.Model.StateFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Truck -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.Volvo240 -up-|> Labb.Model.Car
  Labb.Model.Workshop .up.|> Labb.Model.ICanLoadCars


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
